bynkc/tests/fixtures/negative/38_method_arg_count/input.bynk
commons test {
  type Box = { value: Int }

  fn Box.adjust(self, delta: Int) -> Box {
    Box { value: self.value + delta }
  }

  fn bad(b: Box) -> Box {
    b.adjust()
  }
}
